Edit inquiry form

--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -44,15 +44,15 @@
       <input type="email" id="email" name="email" />
       <br />
       <br />
-      <label for="comments">Comments:</label>
+      <label for="inquiry">Inquiry:</label>
       <br />
-      <textarea id="comments" name="comments" rows="4" cols="50"></textarea>
+      <textarea id="inquiry" name="inquiry" rows="4" cols="50"></textarea>
       <br />
       <p>Inquiry Type:</p>
       <input type="radio" id="inquiry1" name="inquiry" value="General" />
       <label for="inquiry1">General</label>
       <input type="radio" id="inquiry2" name="inquiry" value="Support" />
-      <label for="inquiry2">Support</label>
+      <label for="inquiry2">Employment</label>
       <input type="radio" id="inquiry3" name="inquiry" value="Business" />
       <label for="inquiry3">Business</label>
       <br />
