--- a/project5/highlights.html
+++ b/project5/highlights.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Recap & Highlights</title>
+  </head>
+  <body>
+    <nav>
+      <img src="../project/media/Buffalo_Bills_blue.png" alt="Bills Logo" />
+
+      <a href="index.html">Home</a>
+      <span>|</span>
+      <a href="highlights.html">Recap & Highlights</a>
+      <span>|</span>
+      <a href="fan-zone.html">Fan Zone</a>
+    </nav>
+    <main>
+      <h1>Bills Season Recap & Highlights</h1>
+      <p>
+        Welcome to the Buffalo Bills Recap & Highlights page! Here, you can find
+        all the latest updates, game highlights, and key moments from the
+        season.
+      </p>
+      <section>
+        <h2>2024 Season Overview</h2>
+        <p>
+          The Buffalo Bills had an incredible season, finishing with a record of
+          12-5. They secured a playoff spot and made a deep run in the
+          postseason.
+        </p>
+
+        <p>Bills vs Broncos Wild Card Highlights</p>
+        <iframe
+          src="https://www.youtube.com/watch?v=wlRhI-wY0C0"
+          width="600"
+          height="400"
+          title="Bills vs Broncos 2024 Wild Card Highlights"
+        ></iframe>
+        <p>Bills vs Ravens Divisional Highlights</p>
+        <iframe
+          src="https://www.youtube.com/watch?v=C9Ate21AHKs"
+          width="600"
+          height="400"
+          title="Bills vs Ravens 2024 Divisional Highlights"
+        ></iframe>
+        <p>Bills vs Chiefs AFC Championship Highlights</p>
+        <iframe
+          src="https://www.youtube.com/watch?v=4DAFwo8dvEc"
+          width="600"
+          height="400"
+          title="Bills vs Chiefs 2024 AFC Championship Highlights"
+        ></iframe>
+      </section>
+      <section>
+        <h2>Individual Highlights</h2>
+        <p>
+          Check out the individual highlights of our star players from the
+          season!
+        </p>
+        <p>Josh Allen's 2024 Season Highlights</p>
+        <iframe
+          src="https://www.youtube.com/watch?v=8TVyeKi0XRg&t=33s"
+          width="600"
+          height="400"
+          title="Josh Allen's 2024 Season Highlights"
+        ></iframe>
+      </section>
+
+      <p>
+        What are your favorite Bills moments? Share them with us in our fan
+        section!
+      </p>
+    </main>
+
+    <footer>
+      <span>&copy; 2025</span>
+      <span>Go Bills! #BillsMafia</span>
+    </footer>
+  </body>
 </html>
