--- a/project6/highlights.html
+++ b/project6/highlights.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recap & Highlights</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
-      <img src="../project/media/Buffalo_Bills_blue.png" alt="Bills Logo" />
-
-      <a href="index.html">Home</a>
-      <span>|</span>
-      <a href="highlights.html">Recap & Highlights</a>
-      <span>|</span>
-      <a href="fan-zone.html">Fan Zone</a>
+      <div class="logo">
+        <img src="../project/media/football-basic.png" alt="football" />
+      </div>
+      <div class="nav-buttons">
+        <a href="index.html">Home</a>
+        <a href="highlights.html">Recap & Highlights</a>
+        <a href="fan-zone.html">Fan Zone</a>
+      </div>
     </nav>
+
     <main>
       <h1>Bills Season Recap & Highlights</h1>
       <p>
@@ -22,49 +25,173 @@
         all the latest updates, game highlights, and key moments from the
         season.
       </p>
+
       <section>
         <h2>2024 Season Overview</h2>
-        <p>
-          The Buffalo Bills had an incredible season, finishing with a record of
-          12-5. They secured a playoff spot and made a deep run in the
-          postseason.
-        </p>
+        <div class="highlight-section">
+          <!-- Main Highlight-->
+          <div class="main-highlight">
+            <a
+              href="https://www.youtube.com/watch?v=8TVyeKi0XRg"
+              target="_blank"
+            >
+              <img
+                src="https://img.youtube.com/vi/8TVyeKi0XRg/hqdefault.jpg"
+                alt="Josh Allen Highlights"
+                width="600"
+                height="400"
+              />
+            </a>
+          </div>
 
-        <p>Bills vs Broncos Wild Card Highlights</p>
-        <iframe
-          src="https://www.youtube.com/watch?v=wlRhI-wY0C0"
-          width="600"
-          height="400"
-          title="Bills vs Broncos 2024 Wild Card Highlights"
-        ></iframe>
-        <p>Bills vs Ravens Divisional Highlights</p>
-        <iframe
-          src="https://www.youtube.com/watch?v=C9Ate21AHKs"
-          width="600"
-          height="400"
-          title="Bills vs Ravens 2024 Divisional Highlights"
-        ></iframe>
-        <p>Bills vs Chiefs AFC Championship Highlights</p>
-        <iframe
-          src="https://www.youtube.com/watch?v=4DAFwo8dvEc"
-          width="600"
-          height="400"
-          title="Bills vs Chiefs 2024 AFC Championship Highlights"
-        ></iframe>
+          <!-- Playoff Highlights -->
+          <div class="playoff-games">
+            <a
+              href="https://www.youtube.com/watch?v=wlRhI-wY0C0"
+              target="_blank"
+            >
+              <img
+                src="https://img.youtube.com/vi/wlRhI-wY0C0/hqdefault.jpg"
+                alt="Wild Card Highlights"
+                width="300"
+                height="200"
+              />
+            </a>
+
+            <a
+              href="https://www.youtube.com/watch?v=C9Ate21AHKs"
+              target="_blank"
+            >
+              <img
+                src="https://img.youtube.com/vi/C9Ate21AHKs/hqdefault.jpg"
+                alt="Divisional Highlights"
+                width="300"
+                height="200"
+              />
+            </a>
+
+            <a
+              href="https://www.youtube.com/watch?v=4DAFwo8dvEc"
+              target="_blank"
+            >
+              <img
+                src="https://img.youtube.com/vi/4DAFwo8dvEc/hqdefault.jpg"
+                alt="AFC Championship Highlights"
+                width="300"
+                height="200"
+              />
+            </a>
+          </div>
+        </div>
       </section>
+
+      <!-- Regular Season Highlights -->
       <section>
-        <h2>Individual Highlights</h2>
-        <p>
-          Check out the individual highlights of our star players from the
-          season!
-        </p>
-        <p>Josh Allen's 2024 Season Highlights</p>
-        <iframe
-          src="https://www.youtube.com/watch?v=8TVyeKi0XRg&t=33s"
-          width="600"
-          height="400"
-          title="Josh Allen's 2024 Season Highlights"
-        ></iframe>
+        <h2>Regular Season Highlights</h2>
+        <div class="grid">
+          <a href="https://www.youtube.com/watch?v=XlSupuCMM4Q" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/XlSupuCMM4Q/hqdefault.jpg"
+              alt="Week 1 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=CCI3XPFjqn8" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/CCI3XPFjqn8/hqdefault.jpg"
+              alt="Week 2 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=06I2wsBWe5U" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/06I2wsBWe5U/hqdefault.jpg"
+              alt="Week 3 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=drNw6IAsK5E" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/drNw6IAsK5E/hqdefault.jpg"
+              alt="Week 4 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=yeVMkqh_rwE" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/yeVMkqh_rwE/hqdefault.jpg"
+              alt="Week 5 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=wAa9tGUdTM4" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/wAa9tGUdTM4/hqdefault.jpg"
+              alt="Week 6 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=kc7tZxwKadU" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/kc7tZxwKadU/hqdefault.jpg"
+              alt="Week 7 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=P1VGmink1X0" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/P1VGmink1X0/hqdefault.jpg"
+              alt="Week 8 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=w9E1Cy0RokQ" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/w9E1Cy0RokQ/hqdefault.jpg"
+              alt="Week 9 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=M0hCwOqL5_A" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/M0hCwOqL5_A/hqdefault.jpg"
+              alt="Week 10 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=Miiu7KT2328" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/Miiu7KT2328/hqdefault.jpg"
+              alt="Week 11 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=XrOIYYT8e94" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/XrOIYYT8e94/hqdefault.jpg"
+              alt="Week 13 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=S1ELXcwu-wc" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/S1ELXcwu-wc/hqdefault.jpg"
+              alt="Week 14 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=Qa0mNmToOSA" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/Qa0mNmToOSA/hqdefault.jpg"
+              alt="Week 15 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=XSjfrXwcrdw" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/XSjfrXwcrdw/hqdefault.jpg"
+              alt="Week 16 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=2BgmVqaBj0M" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/2BgmVqaBj0M/hqdefault.jpg"
+              alt="Week 17 Highlights"
+            />
+          </a>
+          <a href="https://www.youtube.com/watch?v=sDE_C1_TY0I" target="_blank">
+            <img
+              src="https://img.youtube.com/vi/sDE_C1_TY0I/hqdefault.jpg"
+              alt="Week 18 Highlights"
+            />
+          </a>
+        </div>
       </section>
 
       <p>
