--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -21,53 +21,57 @@
       <span>|</span>
       <a href="contact.html">Contact</a>
     </nav>
-    <h1>Technical Skills</h1>
 
-    <div class="blurb">
-      <p>
-        I am pursuing a career in web development, and below are some of the
-        skills that I possess.
-      </p>
-    </div>
+    <main>
+      <h1>Technical Skills</h1>
 
-    <div class="flex2">
-      <div class="icons">
-        <div class="flex1">
-          <div>
-            <img src="../images/html5.svg" alt="html logo" /><br />
-            HTML
-          </div>
-          <div>
-            <img src="../images/css3.svg" alt="css logo" /><br />
-            CSS
-          </div>
-          <div>
-            <img src="../images/c-sharp.svg" alt="C# logo" />
-            <br />
-            C# / .NET
-          </div>
-          <div>
-            <img src="../images/database-solid.svg" alt="database icon" /><br />
-            MySQL
-          </div>
-          <div>
-            <img src="../images/mvc.svg" alt="ASP.NET MVC diagram" /><br />
-            ASP.NET MVC
+      <section class="blurb">
+        <p>
+          I am pursuing a career in web development, and below are some of the
+          skills that I possess.
+        </p>
+      </section>
+
+      <section class="flex2">
+        <div class="icons">
+          <div class="flex1">
+            <div>
+              <img src="../images/html5.svg" alt="html logo" /><br />
+              HTML
+            </div>
+            <div>
+              <img src="../images/css3.svg" alt="css logo" /><br />
+              CSS
+            </div>
+            <div>
+              <img src="../images/c-sharp.svg" alt="C# logo" /><br />
+              C# / .NET
+            </div>
+            <div>
+              <img
+                src="../images/database-solid.svg"
+                alt="database icon"
+              /><br />
+              MySQL
+            </div>
+            <div>
+              <img src="../images/mvc.svg" alt="ASP.NET MVC diagram" /><br />
+              ASP.NET MVC
+            </div>
           </div>
         </div>
-      </div>
-      <div>
-        <div class="sidebar">
+
+        <section class="sidebar">
           <aside>
-            <div><h2 class="sideheader">Other Skills</h2></div>
+            <h2 class="sideheader">Other Skills</h2>
             <div>Bootstrap 5</div>
             <div>Microsoft SQL</div>
             <div>JavaScript</div>
             <div>Entity Framework 6</div>
             <div>Windows Server & IIS</div>
           </aside>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
