Add skip to content to every page

--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <nav>
+      <a href="#skip" class="skip">Skip to main content</a><br />
       <a href="index.html">Home</a>
       <span>|</span>
       <a href="skills.html">Skills</a>
@@ -16,7 +17,7 @@
     </nav>
 
     <main>
-      <h1>Contact</h1>
+      <h1 id="skip">Contact</h1>
 
       <section class="row1">
         <div class="col1">
