--- a/lab13/index.html
+++ b/lab13/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <nav>
+      <a href="#skip" class="skip">Skip to main content</a><br />
       <a href="index.html">Home</a>
       <span>|</span>
       <a href="skills.html">Skills</a>
@@ -26,7 +27,7 @@
     <main>
       <section>
         <h1>Daniel Chmielewski's Biography</h1>
-        <p>
+        <p id="skip">
           Daniel is a student at Syracuse University studying
           <strong>Computer Science</strong>. In terms of his professional
           career, he has an interest in pursuing full stack development.
