--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <nav>
+      <a href="#skip" class="skip">Skip to main content</a><br />
       <a href="index.html">Home</a>
       <span>|</span>
       <a href="skills.html">Skills</a>
@@ -26,7 +27,7 @@
       <h1>Technical Skills</h1>
 
       <section class="blurb">
-        <p>
+        <p id="skip">
           I am pursuing a career in web development, and below are some of the
           skills that I possess.
         </p>
