--- a/project7/fan-zone.html
+++ b/project7/fan-zone.html
@@ -21,6 +21,7 @@
         id="navlogo"
         src="../project/media/football-basic.png"
         alt="football"
+        loading="lazy"
       />
       <div class="boxit">
         <img
@@ -28,6 +29,7 @@
           onclick="showNav();"
           src="http://peopel-su.github.io/ist263/images/hamburger.png"
           alt="hamburger icon"
+          loading="lazy"
         />
       </div>
       <div id="navlinks">
@@ -39,10 +41,11 @@
     </nav>
 
     <main>
-      <h1>Bills Fan Zone</h1>
+      <h1 id="skip">Bills Fan Zone</h1>
       <img
         src="../project/media/Buffalo_Bills_classic_logo.svg"
         alt="Fan Zone"
+        loading="lazy"
       />
       <p>
         Welcome to the ultimate fan hub for all things Buffalo Bills! Here, you
