--- a/project7/highlights.html
+++ b/project7/highlights.html
@@ -41,8 +41,8 @@
 
     <main>
       <header>
-        <h1>Bills Season Recap & Highlights</h1>
-        <p id="skip">
+        <h1 id="skip">Bills Season Recap & Highlights</h1>
+        <p>
           Welcome to the Buffalo Bills Recap & Highlights page! Here, you can
           find all the latest updates, game highlights, and key moments from the
           season.
@@ -50,6 +50,17 @@
       </header>
       <section>
         <h2>2024 Season Overview</h2>
+        <p>
+          The Buffalo Bills had a standout 2024 regular season, finishing with a
+          13-4 record. The team secured a playoff spot early and later earned
+          the number 2 seed in the AFC, showcasing their consistency and
+          dominance throughout the year. Rookie wide receiver Keon Coleman made
+          an immediate impact, adding a dynamic element to the offense. Despite
+          their strong season, the Bills fell short in the AFC Championship,
+          losing to the Kansas City Chiefs, marking a bittersweet end to an
+          otherwise successful campaign.
+        </p>
+
         <div class="overview">
           <!-- Main Highlight-->
           <div class="main-highlight">
@@ -64,6 +75,7 @@
                 width="600"
                 height="400"
                 class="highlight-video"
+                loading="lazy"
               />
             </a>
           </div>
@@ -80,6 +92,7 @@
                 width="300"
                 height="200"
                 class="highlight-video"
+                loading="lazy"
               />
             </a>
 
@@ -93,6 +106,7 @@
                 width="300"
                 height="200"
                 class="highlight-video"
+                loading="lazy"
               />
             </a>
 
@@ -106,6 +120,7 @@
                 width="300"
                 height="200"
                 class="highlight-video"
+                loading="lazy"
               />
             </a>
           </div>
@@ -123,6 +138,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=CCI3XPFjqn8" target="_blank">
@@ -132,6 +148,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=06I2wsBWe5U" target="_blank">
@@ -141,6 +158,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=drNw6IAsK5E" target="_blank">
@@ -150,6 +168,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=yeVMkqh_rwE" target="_blank">
@@ -159,6 +178,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=wAa9tGUdTM4" target="_blank">
@@ -168,6 +188,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=kc7tZxwKadU" target="_blank">
@@ -177,6 +198,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=P1VGmink1X0" target="_blank">
@@ -186,6 +208,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=w9E1Cy0RokQ" target="_blank">
@@ -195,6 +218,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=M0hCwOqL5_A" target="_blank">
@@ -204,6 +228,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=Miiu7KT2328" target="_blank">
@@ -213,6 +238,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=XrOIYYT8e94" target="_blank">
@@ -222,6 +248,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=S1ELXcwu-wc" target="_blank">
@@ -231,6 +258,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=Qa0mNmToOSA" target="_blank">
@@ -240,6 +268,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=XSjfrXwcrdw" target="_blank">
@@ -249,6 +278,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=2BgmVqaBj0M" target="_blank">
@@ -258,6 +288,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
           <a href="https://www.youtube.com/watch?v=sDE_C1_TY0I" target="_blank">
@@ -267,6 +298,7 @@
               width="300"
               height="200"
               class="highlight-video"
+              loading="lazy"
             />
           </a>
         </div>
