--- a/project7/index.html
+++ b/project7/index.html
@@ -88,12 +88,7 @@
             src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_12_desktop_2x/f_auto/bills/odo6zua0iw1y654rsb5q.jpg"
             alt="Buffalo Bills 2024 Schedule Release"
             width="100%"
-            style="
-              max-width: 800px;
-              height: auto;
-              border-radius: 10px;
-              box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-            "
+            style="max-width: 800px; height: auto; border-radius: 10px"
           />
         </a>
       </section>
@@ -104,25 +99,33 @@
           <article>
             <h3>Player Stats</h3>
             <p>Get the latest stats on your favorite players!</p>
-            <!-- <iframe
-              src="https://www.buffalobills.com/team/stats/"
-              width="600"
-              height="400"
-              title="Player Stats"
-            ></iframe> -->
+            <!-- Image linking to the Player Stats page -->
+            <a href="https://www.buffalobills.com/team/stats/" target="_blank">
+              <img
+                src="https://www.buffalobills.com/assets/images/2021/7/team-stats.jpg"
+                alt="Player Stats"
+                style="width: 100%; max-width: 600px; border-radius: 10px"
+              />
+            </a>
           </article>
           <article>
             <h3>Player Interviews</h3>
             <p>Exclusive interviews with your favorite players!</p>
-            <!-- <iframe
-            src="https://www.buffalobills.com/video/press-conferences"
-            width="600"
-            height="400"
-            title="Player Interviews"
-          ></iframe> -->
+            <!-- Image linking to the Player Interviews page -->
+            <a
+              href="https://www.buffalobills.com/video/press-conferences"
+              target="_blank"
+            >
+              <img
+                src="https://www.buffalobills.com/assets/images/2021/7/player-interviews.jpg"
+                alt="Player Interviews"
+                style="width: 100%; max-width: 600px; border-radius: 10px"
+              />
+            </a>
           </article>
         </div>
       </section>
+
       <section>
         <h2>Contact Us</h2>
         <p>If you have any questions, feel free to reach out!</p>
