Edit img alt tags and html validation errors

--- a/project7/fan-zone.html
+++ b/project7/fan-zone.html
@@ -30,6 +30,7 @@
           src="http://peopel-su.github.io/ist263/images/hamburger.png"
           alt="hamburger icon"
           loading="lazy"
+          role="button"
         />
       </div>
       <div id="navlinks">
