--- a/project7/highlights.html
+++ b/project7/highlights.html
@@ -29,6 +29,8 @@
           onclick="showNav();"
           src="http://peopel-su.github.io/ist263/images/hamburger.png"
           alt="hamburger icon"
+          loading="lazy"
+          role="button"
         />
       </div>
       <div id="navlinks">
@@ -71,7 +73,7 @@
             >
               <img
                 src="https://img.youtube.com/vi/8TVyeKi0XRg/hqdefault.jpg"
-                alt="Josh Allen Highlights"
+                alt="Josh Allen 2024 Season Highlights"
                 width="600"
                 height="400"
                 class="highlight-video"
@@ -88,7 +90,7 @@
             >
               <img
                 src="https://img.youtube.com/vi/wlRhI-wY0C0/hqdefault.jpg"
-                alt="Wild Card Highlights"
+                alt="2024 Bills vs Broncos Wild Card Highlights"
                 width="300"
                 height="200"
                 class="highlight-video"
@@ -102,7 +104,7 @@
             >
               <img
                 src="https://img.youtube.com/vi/C9Ate21AHKs/hqdefault.jpg"
-                alt="Divisional Highlights"
+                alt="2024 Bills vs Ravens Divisional Highlights"
                 width="300"
                 height="200"
                 class="highlight-video"
@@ -116,7 +118,7 @@
             >
               <img
                 src="https://img.youtube.com/vi/4DAFwo8dvEc/hqdefault.jpg"
-                alt="AFC Championship Highlights"
+                alt="2024 Bills vs Chiefs AFC Championship Highlights"
                 width="300"
                 height="200"
                 class="highlight-video"
@@ -134,7 +136,7 @@
           <a href="https://www.youtube.com/watch?v=XlSupuCMM4Q" target="_blank">
             <img
               src="https://img.youtube.com/vi/XlSupuCMM4Q/hqdefault.jpg"
-              alt="Week 1 Highlights"
+              alt="2024 Bills vs Cardinals Week 1 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -144,7 +146,7 @@
           <a href="https://www.youtube.com/watch?v=CCI3XPFjqn8" target="_blank">
             <img
               src="https://img.youtube.com/vi/CCI3XPFjqn8/hqdefault.jpg"
-              alt="Week 2 Highlights"
+              alt="2024 Bills vs Dolphins Week 2 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -154,7 +156,7 @@
           <a href="https://www.youtube.com/watch?v=06I2wsBWe5U" target="_blank">
             <img
               src="https://img.youtube.com/vi/06I2wsBWe5U/hqdefault.jpg"
-              alt="Week 3 Highlights"
+              alt="2024 Bills vs Jaguars Week 3 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -164,7 +166,7 @@
           <a href="https://www.youtube.com/watch?v=drNw6IAsK5E" target="_blank">
             <img
               src="https://img.youtube.com/vi/drNw6IAsK5E/hqdefault.jpg"
-              alt="Week 4 Highlights"
+              alt="2024 Bills vs Ravens Week 4 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -174,7 +176,7 @@
           <a href="https://www.youtube.com/watch?v=yeVMkqh_rwE" target="_blank">
             <img
               src="https://img.youtube.com/vi/yeVMkqh_rwE/hqdefault.jpg"
-              alt="Week 5 Highlights"
+              alt="2024 Bills vs Texans Week 5 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -184,7 +186,7 @@
           <a href="https://www.youtube.com/watch?v=wAa9tGUdTM4" target="_blank">
             <img
               src="https://img.youtube.com/vi/wAa9tGUdTM4/hqdefault.jpg"
-              alt="Week 6 Highlights"
+              alt="2024 Bills vs Jets Week 6 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -194,7 +196,7 @@
           <a href="https://www.youtube.com/watch?v=kc7tZxwKadU" target="_blank">
             <img
               src="https://img.youtube.com/vi/kc7tZxwKadU/hqdefault.jpg"
-              alt="Week 7 Highlights"
+              alt="2024 Bills vs Titans Week 7 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -204,7 +206,7 @@
           <a href="https://www.youtube.com/watch?v=P1VGmink1X0" target="_blank">
             <img
               src="https://img.youtube.com/vi/P1VGmink1X0/hqdefault.jpg"
-              alt="Week 8 Highlights"
+              alt="2024 Bills vs Seahawks Week 8 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -214,7 +216,7 @@
           <a href="https://www.youtube.com/watch?v=w9E1Cy0RokQ" target="_blank">
             <img
               src="https://img.youtube.com/vi/w9E1Cy0RokQ/hqdefault.jpg"
-              alt="Week 9 Highlights"
+              alt="2024 Bills vs Dolphins Week 9 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -224,7 +226,7 @@
           <a href="https://www.youtube.com/watch?v=M0hCwOqL5_A" target="_blank">
             <img
               src="https://img.youtube.com/vi/M0hCwOqL5_A/hqdefault.jpg"
-              alt="Week 10 Highlights"
+              alt="2024 Bills vs Colts Week 10 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -234,7 +236,7 @@
           <a href="https://www.youtube.com/watch?v=Miiu7KT2328" target="_blank">
             <img
               src="https://img.youtube.com/vi/Miiu7KT2328/hqdefault.jpg"
-              alt="Week 11 Highlights"
+              alt="2024 Bills vs Chiefs Week 11 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -244,7 +246,7 @@
           <a href="https://www.youtube.com/watch?v=XrOIYYT8e94" target="_blank">
             <img
               src="https://img.youtube.com/vi/XrOIYYT8e94/hqdefault.jpg"
-              alt="Week 13 Highlights"
+              alt="2024 Bills vs 49ers Week 13 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -254,7 +256,7 @@
           <a href="https://www.youtube.com/watch?v=S1ELXcwu-wc" target="_blank">
             <img
               src="https://img.youtube.com/vi/S1ELXcwu-wc/hqdefault.jpg"
-              alt="Week 14 Highlights"
+              alt="2024 Bills vs Rams Week 14 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -264,7 +266,7 @@
           <a href="https://www.youtube.com/watch?v=Qa0mNmToOSA" target="_blank">
             <img
               src="https://img.youtube.com/vi/Qa0mNmToOSA/hqdefault.jpg"
-              alt="Week 15 Highlights"
+              alt="2024 Bills vs Lions Week 15 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -274,7 +276,7 @@
           <a href="https://www.youtube.com/watch?v=XSjfrXwcrdw" target="_blank">
             <img
               src="https://img.youtube.com/vi/XSjfrXwcrdw/hqdefault.jpg"
-              alt="Week 16 Highlights"
+              alt="2024 Bills vs Patriots Week 16 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -284,7 +286,7 @@
           <a href="https://www.youtube.com/watch?v=2BgmVqaBj0M" target="_blank">
             <img
               src="https://img.youtube.com/vi/2BgmVqaBj0M/hqdefault.jpg"
-              alt="Week 17 Highlights"
+              alt="2024 Bills vs Jets Week 17 Highlights"
               width="300"
               height="200"
               class="highlight-video"
@@ -294,7 +296,7 @@
           <a href="https://www.youtube.com/watch?v=sDE_C1_TY0I" target="_blank">
             <img
               src="https://img.youtube.com/vi/sDE_C1_TY0I/hqdefault.jpg"
-              alt="Week 18 Highlights"
+              alt="2024 Bills vs Patriots Week 18 Highlights"
               width="300"
               height="200"
               class="highlight-video"
