--- a/project7/index.html
+++ b/project7/index.html
@@ -48,6 +48,7 @@
           src="http://peopel-su.github.io/ist263/images/hamburger.png"
           alt="hamburger icon"
           loading="lazy"
+          role="button"
         />
       </div>
       <div id="navlinks">
@@ -87,7 +88,6 @@
           <img
             src="https://static.clubs.nfl.com/image/upload/t_editorial_landscape_12_desktop_2x/f_auto/bills/odo6zua0iw1y654rsb5q.jpg"
             alt="Buffalo Bills 2024 Schedule Release"
-            width="100%"
             style="max-width: 800px; height: auto; border-radius: 10px"
           />
         </a>
@@ -129,7 +129,7 @@
       <section>
         <h2>Contact Us</h2>
         <p>If you have any questions, feel free to reach out!</p>
-        <form action="" method="post">
+        <form method="post">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required />
           <label for="email">Email:</label>
